use portainer webhook

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -50,3 +50,9 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+
+      - name: Ping Portainer
+        uses: fjogeleit/http-request-action@v1
+        with:
+          url: ${{ vars.PORTAINER_WEBHOOK }}
+          method: "POST"
