--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,6 +24,8 @@ jobs:
       - name: Make envfile
         uses: SpicyPizza/create-envfile@v2.0
         with:
+          envkey_DEFAULT_PAGE_TITLE: ${{ vars.DEFAULT_PAGE_TITLE }}
+          envkey_MY_LIST_ID: ${{ vars.MY_LIST_ID }}
           envkey_CLIENT_ID: ${{ secrets.CLIENT_ID }}
           envkey_CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
 
